# RAG-Retrieval-Augmented-Generation-application-over-the-Constitution-of-Estonia.

./: .gitignore  README.md  answer.py  app.py  evaluator.py  ingest.py  pyproject.toml
evaluation/: eval.py  test.py  tests.jsonl
scripts/: build_knowledge_base.py
